[package]
name = "comp_input"
version = "0.1.1"
authors = ["Matteo Signer <matteo.signer@gmail.com>"]
description = "Input library for competitive programming"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["competitive", "io", "input"]
repository = "https://github.com/mad-s/comp_input"

[dependencies]
